--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,7 +48,9 @@
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.5.0",
     "input-otp": "1.4.1",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.12.1",
     "nanoid": "latest",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
@@ -59,6 +63,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
